# aoc22

./: .gitignore  README.md  generate.py  main.ipynb  pyproject.toml
d01/: main.ipynb
d02/: main.ipynb
d03/: main.ipynb
d04/: main.ipynb
d05/: main.ipynb
d06/: main.ipynb
d07/: main.py  test_all.py
d08/: main.ipynb
d09/: main.ipynb
d10/: main.ipynb
d11/: main.ipynb
d13/: main.ipynb
d14/: main.ipynb
d15/: main.ipynb
