[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# testpaths = ["tests"]
# markers = ["aws"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "aoc22"
version = "0.1.0"
description = ""
authors = ["Ville Väänänen <ville.vaananen@fortum.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
flake8 = "^6.0.0"
typer = "^0.7.0"
pytest = "^7.2.0"
isort = "^5.10.1"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
